@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.5-6
-Date: 2011-04-15
+Version: 0.5-6.1
+Date: 2011-05-27
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.11.0), methods
