@@ -92,7 +92,7 @@ export("as.PlainTextDocument",
        "weightTf",
        "weightTfIdf",
        "weightBin",
-#       "weightSMART",
+       "weightSMART",
 #       "words",
        "writeCorpus",
        "XMLSource",
